backend/basic/pybasic/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> statement COLON statement
Rule 2     statement -> assignment
Rule 3     statement -> declaration
Rule 4     statement -> funcall
Rule 5     statement -> control
Rule 6     statement -> return
Rule 7     statement -> prog_end
Rule 8     statement -> defun_statement
Rule 9     statement -> expression
Rule 10    statement -> block_begin
Rule 11    statement -> block_end
Rule 12    statement -> if_block_begin
Rule 13    statement -> elseif_block_begin
Rule 14    statement -> else_statement
Rule 15    statement -> case_begin
Rule 16    statement -> case_else_begin
Rule 17    args_list -> args_list COMMA expression
Rule 18    args_list -> expression
Rule 19    params_list -> params_list COMMA ID
Rule 20    params_list -> ID
Rule 21    defun_statement -> DEFUN ID LPAREN params_list RPAREN EQUALS expression
Rule 22    funcall -> ID args_list
Rule 23    assignment -> ID EQUALS expression
Rule 24    assignment -> LET ID EQUALS expression
Rule 25    assignment -> ID LPAREN expression RPAREN EQUALS expression
Rule 26    assignment -> expression DOT ID EQUALS expression
Rule 27    declaration -> declare_array
Rule 28    declare_array -> DIM ID LPAREN expression RPAREN AS ID
Rule 29    rel_expression -> expression GREATER_THAN expression
Rule 30    rel_expression -> expression LESS_THAN expression
Rule 31    rel_expression -> expression EQUAL_GREATER_THAN expression
Rule 32    rel_expression -> expression EQUAL_LESS_THAN expression
Rule 33    rel_expression -> expression EQUALS expression
Rule 34    rel_expression -> expression NOT_EQUAL expression
Rule 35    rel_expression -> rel_expression AND rel_expression
Rule 36    rel_expression -> rel_expression OR rel_expression
Rule 37    rel_expression -> LPAREN rel_expression RPAREN
Rule 38    rel_expression -> NOT rel_expression
Rule 39    expression -> expression PLUS expression
Rule 40    expression -> expression MINUS expression
Rule 41    expression -> expression TIMES expression
Rule 42    expression -> expression DIVIDE expression
Rule 43    expression -> expression EXACTDIV expression
Rule 44    expression -> expression MOD expression
Rule 45    expression -> expression AS expression
Rule 46    expression -> expression EXP expression
Rule 47    expression -> expression DOT ID
Rule 48    expression -> MINUS expression
Rule 49    expression -> LPAREN expression RPAREN
Rule 50    expression -> ID LPAREN RPAREN
Rule 51    expression -> ID LPAREN args_list RPAREN
Rule 52    expression -> INTEGER
Rule 53    expression -> DECIMAL
Rule 54    expression -> STRING
Rule 55    expression -> ID
Rule 56    expression -> LBRACE args_list RBRACE
Rule 57    block_begin -> while_block_begin
Rule 58    block_begin -> for_block_begin
Rule 59    block_begin -> do_block_begin
Rule 60    block_begin -> function_block_begin
Rule 61    if_block_begin -> IF rel_expression THEN
Rule 62    else_statement -> ELSE
Rule 63    elseif_block_begin -> ELSEIF rel_expression THEN
Rule 64    statement -> SELECT CASE expression
Rule 65    statement -> SELECT expression
Rule 66    case_begin -> CASE expression
Rule 67    case_else_begin -> CASE ELSE
Rule 68    while_block_begin -> WHILE rel_expression
Rule 69    do_block_begin -> DO
Rule 70    for_block_begin -> FOR ID EQUALS expression TO expression
Rule 71    for_block_begin -> FOR ID EQUALS expression TO expression STEP expression
Rule 72    function_block_begin -> SUB ID LPAREN params_list RPAREN
Rule 73    function_block_begin -> FUNCTION ID LPAREN params_list RPAREN
Rule 74    function_block_begin -> SUB ID LPAREN RPAREN
Rule 75    function_block_begin -> FUNCTION ID LPAREN RPAREN
Rule 76    block_end -> END IF
Rule 77    block_end -> END SELECT
Rule 78    block_end -> END WHILE
Rule 79    block_end -> WEND
Rule 80    block_end -> END FOR
Rule 81    block_end -> NEXT ID
Rule 82    block_end -> LOOP
Rule 83    block_end -> LOOP WHILE rel_expression
Rule 84    block_end -> LOOP UNTIL rel_expression
Rule 85    block_end -> END SUB
Rule 86    block_end -> END FUNCTION
Rule 87    return -> RETURN
Rule 88    return -> RETURN expression
Rule 89    prog_end -> END
Rule 90    control -> EXIT WHILE
Rule 91    control -> EXIT DO
Rule 92    control -> EXIT FOR
Rule 93    control -> CONTINUE WHILE
Rule 94    control -> CONTINUE DO
Rule 95    control -> CONTINUE FOR
Rule 96    statement -> USE ID

Terminals, with rules where they appear

AND                  : 35
AS                   : 28 45
CASE                 : 64 66 67
COLON                : 1
COMMA                : 17 19
CONTINUE             : 93 94 95
DECIMAL              : 53
DEFUN                : 21
DIM                  : 28
DIVIDE               : 42
DO                   : 69 91 94
DOT                  : 26 47
ELSE                 : 62 67
ELSEIF               : 63
END                  : 76 77 78 80 85 86 89
EQUALS               : 21 23 24 25 26 33 70 71
EQUAL_GREATER_THAN   : 31
EQUAL_LESS_THAN      : 32
EXACTDIV             : 43
EXIT                 : 90 91 92
EXP                  : 46
FOR                  : 70 71 80 92 95
FUNCTION             : 73 75 86
GREATER_THAN         : 29
ID                   : 19 20 21 22 23 24 25 26 28 28 47 50 51 55 70 71 72 73 74 75 81 96
IF                   : 61 76
INTEGER              : 52
LBRACE               : 56
LESS_THAN            : 30
LET                  : 24
LOOP                 : 82 83 84
LPAREN               : 21 25 28 37 49 50 51 72 73 74 75
MINUS                : 40 48
MOD                  : 44
NEXT                 : 81
NOT                  : 38
NOT_EQUAL            : 34
OR                   : 36
PLUS                 : 39
RBRACE               : 56
RETURN               : 87 88
RPAREN               : 21 25 28 37 49 50 51 72 73 74 75
SELECT               : 64 65 77
STEP                 : 71
STRING               : 54
SUB                  : 72 74 85
THEN                 : 61 63
TIMES                : 41
TO                   : 70 71
UNTIL                : 84
USE                  : 96
WEND                 : 79
WHILE                : 68 78 83 90 93
error                : 

Nonterminals, with rules where they appear

args_list            : 17 22 51 56
assignment           : 2
block_begin          : 10
block_end            : 11
case_begin           : 15
case_else_begin      : 16
control              : 5
declaration          : 3
declare_array        : 27
defun_statement      : 8
do_block_begin       : 59
else_statement       : 14
elseif_block_begin   : 13
expression           : 9 17 18 21 23 24 25 25 26 26 28 29 29 30 30 31 31 32 32 33 33 34 34 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 48 49 64 65 66 70 70 71 71 71 88
for_block_begin      : 58
funcall              : 4
function_block_begin : 60
if_block_begin       : 12
params_list          : 19 21 72 73
prog_end             : 7
rel_expression       : 35 35 36 36 37 38 61 63 68 83 84
return               : 6
statement            : 1 1 0
while_block_begin    : 57

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . statement COLON statement
    (2) statement -> . assignment
    (3) statement -> . declaration
    (4) statement -> . funcall
    (5) statement -> . control
    (6) statement -> . return
    (7) statement -> . prog_end
    (8) statement -> . defun_statement
    (9) statement -> . expression
    (10) statement -> . block_begin
    (11) statement -> . block_end
    (12) statement -> . if_block_begin
    (13) statement -> . elseif_block_begin
    (14) statement -> . else_statement
    (15) statement -> . case_begin
    (16) statement -> . case_else_begin
    (64) statement -> . SELECT CASE expression
    (65) statement -> . SELECT expression
    (96) statement -> . USE ID
    (23) assignment -> . ID EQUALS expression
    (24) assignment -> . LET ID EQUALS expression
    (25) assignment -> . ID LPAREN expression RPAREN EQUALS expression
    (26) assignment -> . expression DOT ID EQUALS expression
    (27) declaration -> . declare_array
    (22) funcall -> . ID args_list
    (90) control -> . EXIT WHILE
    (91) control -> . EXIT DO
    (92) control -> . EXIT FOR
    (93) control -> . CONTINUE WHILE
    (94) control -> . CONTINUE DO
    (95) control -> . CONTINUE FOR
    (87) return -> . RETURN
    (88) return -> . RETURN expression
    (89) prog_end -> . END
    (21) defun_statement -> . DEFUN ID LPAREN params_list RPAREN EQUALS expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression EXACTDIV expression
    (44) expression -> . expression MOD expression
    (45) expression -> . expression AS expression
    (46) expression -> . expression EXP expression
    (47) expression -> . expression DOT ID
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . ID LPAREN RPAREN
    (51) expression -> . ID LPAREN args_list RPAREN
    (52) expression -> . INTEGER
    (53) expression -> . DECIMAL
    (54) expression -> . STRING
    (55) expression -> . ID
    (56) expression -> . LBRACE args_list RBRACE
    (57) block_begin -> . while_block_begin
    (58) block_begin -> . for_block_begin
    (59) block_begin -> . do_block_begin
    (60) block_begin -> . function_block_begin
    (76) block_end -> . END IF
    (77) block_end -> . END SELECT
    (78) block_end -> . END WHILE
    (79) block_end -> . WEND
    (80) block_end -> . END FOR
    (81) block_end -> . NEXT ID
    (82) block_end -> . LOOP
    (83) block_end -> . LOOP WHILE rel_expression
    (84) block_end -> . LOOP UNTIL rel_expression
    (85) block_end -> . END SUB
    (86) block_end -> . END FUNCTION
    (61) if_block_begin -> . IF rel_expression THEN
    (63) elseif_block_begin -> . ELSEIF rel_expression THEN
    (62) else_statement -> . ELSE
    (66) case_begin -> . CASE expression
    (67) case_else_begin -> . CASE ELSE
    (28) declare_array -> . DIM ID LPAREN expression RPAREN AS ID
    (68) while_block_begin -> . WHILE rel_expression
    (70) for_block_begin -> . FOR ID EQUALS expression TO expression
    (71) for_block_begin -> . FOR ID EQUALS expression TO expression STEP expression
    (69) do_block_begin -> . DO
    (72) function_block_begin -> . SUB ID LPAREN params_list RPAREN
    (73) function_block_begin -> . FUNCTION ID LPAREN params_list RPAREN
    (74) function_block_begin -> . SUB ID LPAREN RPAREN
    (75) function_block_begin -> . FUNCTION ID LPAREN RPAREN

    SELECT          shift and go to state 17
    USE             shift and go to state 19
    ID              shift and go to state 20
    LET             shift and go to state 21
    EXIT            shift and go to state 24
    CONTINUE        shift and go to state 28
    RETURN          shift and go to state 29
    END             shift and go to state 30
    DEFUN           shift and go to state 31
    MINUS           shift and go to state 32
    LPAREN          shift and go to state 22
    INTEGER         shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    LBRACE          shift and go to state 36
    WEND            shift and go to state 42
    NEXT            shift and go to state 43
    LOOP            shift and go to state 44
    IF              shift and go to state 41
    ELSEIF          shift and go to state 47
    ELSE            shift and go to state 48
    CASE            shift and go to state 18
    DIM             shift and go to state 49
    WHILE           shift and go to state 25
    FOR             shift and go to state 27
    DO              shift and go to state 26
    SUB             shift and go to state 45
    FUNCTION        shift and go to state 46

    statement                      shift and go to state 1
    assignment                     shift and go to state 2
    declaration                    shift and go to state 3
    funcall                        shift and go to state 4
    control                        shift and go to state 5
    return                         shift and go to state 6
    prog_end                       shift and go to state 7
    defun_statement                shift and go to state 8
    expression                     shift and go to state 9
    block_begin                    shift and go to state 10
    block_end                      shift and go to state 11
    if_block_begin                 shift and go to state 12
    elseif_block_begin             shift and go to state 13
    else_statement                 shift and go to state 14
    case_begin                     shift and go to state 15
    case_else_begin                shift and go to state 16
    declare_array                  shift and go to state 23
    while_block_begin              shift and go to state 37
    for_block_begin                shift and go to state 38
    do_block_begin                 shift and go to state 39
    function_block_begin           shift and go to state 40

state 1

    (0) S' -> statement .
    (1) statement -> statement . COLON statement

    COLON           shift and go to state 50


state 2

    (2) statement -> assignment .

    COLON           reduce using rule 2 (statement -> assignment .)
    $end            reduce using rule 2 (statement -> assignment .)


state 3

    (3) statement -> declaration .

    COLON           reduce using rule 3 (statement -> declaration .)
    $end            reduce using rule 3 (statement -> declaration .)


state 4

    (4) statement -> funcall .

    COLON           reduce using rule 4 (statement -> funcall .)
    $end            reduce using rule 4 (statement -> funcall .)


state 5

    (5) statement -> control .

    COLON           reduce using rule 5 (statement -> control .)
    $end            reduce using rule 5 (statement -> control .)


state 6

    (6) statement -> return .

    COLON           reduce using rule 6 (statement -> return .)
    $end            reduce using rule 6 (statement -> return .)


state 7

    (7) statement -> prog_end .

    COLON           reduce using rule 7 (statement -> prog_end .)
    $end            reduce using rule 7 (statement -> prog_end .)


state 8

    (8) statement -> defun_statement .

    COLON           reduce using rule 8 (statement -> defun_statement .)
    $end            reduce using rule 8 (statement -> defun_statement .)


state 9

    (9) statement -> expression .
    (26) assignment -> expression . DOT ID EQUALS expression
    (39) expression -> expression . PLUS expression
    (40) expression -> expression . MINUS expression
    (41) expression -> expression . TIMES expression
    (42) expression -> expression . DIVIDE expression
    (43) expression -> expression . EXACTDIV expression
    (44) expression -> expression . MOD expression
    (45) expression -> expression . AS expression
    (46) expression -> expression . EXP expression
    (47) expression -> expression . DOT ID

    COLON           reduce using rule 9 (statement -> expression .)
    $end            reduce using rule 9 (statement -> expression .)
    DOT             shift and go to state 51
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    TIMES           shift and go to state 54
    DIVIDE          shift and go to state 55
    EXACTDIV        shift and go to state 56
    MOD             shift and go to state 57
    AS              shift and go to state 58
    EXP             shift and go to state 59


state 10

    (10) statement -> block_begin .

    COLON           reduce using rule 10 (statement -> block_begin .)
    $end            reduce using rule 10 (statement -> block_begin .)


state 11

    (11) statement -> block_end .

    COLON           reduce using rule 11 (statement -> block_end .)
    $end            reduce using rule 11 (statement -> block_end .)


state 12

    (12) statement -> if_block_begin .

    COLON           reduce using rule 12 (statement -> if_block_begin .)
    $end            reduce using rule 12 (statement -> if_block_begin .)


state 13

    (13) statement -> elseif_block_begin .

    COLON           reduce using rule 13 (statement -> elseif_block_begin .)
    $end            reduce using rule 13 (statement -> elseif_block_begin .)


state 14

    (14) statement -> else_statement .

    COLON           reduce using rule 14 (statement -> else_statement .)
    $end            reduce using rule 14 (statement -> else_statement .)


state 15

    (15) statement -> case_begin .

    COLON           reduce using rule 15 (statement -> case_begin .)
    $end            reduce using rule 15 (statement -> case_begin .)


state 16

    (16) statement -> case_else_begin .

    COLON           reduce using rule 16 (statement -> case_else_begin .)
    $end            reduce using rule 16 (statement -> case_else_begin .)


state 17

    (64) statement -> SELECT . CASE expression
    (65) statement -> SELECT . expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression EXACTDIV expression
    (44) expression -> . expression MOD expression
    (45) expression -> . expression AS expression
    (46) expression -> . expression EXP expression
    (47) expression -> . expression DOT ID
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . ID LPAREN RPAREN
    (51) expression -> . ID LPAREN args_list RPAREN
    (52) expression -> . INTEGER
    (53) expression -> . DECIMAL
    (54) expression -> . STRING
    (55) expression -> . ID
    (56) expression -> . LBRACE args_list RBRACE

    CASE            shift and go to state 60
    MINUS           shift and go to state 32
    LPAREN          shift and go to state 22
    ID              shift and go to state 62
    INTEGER         shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    LBRACE          shift and go to state 36

    expression                     shift and go to state 61

state 18

    (66) case_begin -> CASE . expression
    (67) case_else_begin -> CASE . ELSE
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression EXACTDIV expression
    (44) expression -> . expression MOD expression
    (45) expression -> . expression AS expression
    (46) expression -> . expression EXP expression
    (47) expression -> . expression DOT ID
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . ID LPAREN RPAREN
    (51) expression -> . ID LPAREN args_list RPAREN
    (52) expression -> . INTEGER
    (53) expression -> . DECIMAL
    (54) expression -> . STRING
    (55) expression -> . ID
    (56) expression -> . LBRACE args_list RBRACE

    ELSE            shift and go to state 64
    MINUS           shift and go to state 32
    LPAREN          shift and go to state 22
    ID              shift and go to state 62
    INTEGER         shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    LBRACE          shift and go to state 36

    expression                     shift and go to state 63

state 19

    (96) statement -> USE . ID

    ID              shift and go to state 65


state 20

    (23) assignment -> ID . EQUALS expression
    (25) assignment -> ID . LPAREN expression RPAREN EQUALS expression
    (22) funcall -> ID . args_list
    (50) expression -> ID . LPAREN RPAREN
    (51) expression -> ID . LPAREN args_list RPAREN
    (55) expression -> ID .
    (17) args_list -> . args_list COMMA expression
    (18) args_list -> . expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression EXACTDIV expression
    (44) expression -> . expression MOD expression
    (45) expression -> . expression AS expression
    (46) expression -> . expression EXP expression
    (47) expression -> . expression DOT ID
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . ID LPAREN RPAREN
    (51) expression -> . ID LPAREN args_list RPAREN
    (52) expression -> . INTEGER
    (53) expression -> . DECIMAL
    (54) expression -> . STRING
    (55) expression -> . ID
    (56) expression -> . LBRACE args_list RBRACE

  ! shift/reduce conflict for MINUS resolved as shift
    EQUALS          shift and go to state 66
    LPAREN          shift and go to state 68
    DOT             reduce using rule 55 (expression -> ID .)
    PLUS            reduce using rule 55 (expression -> ID .)
    TIMES           reduce using rule 55 (expression -> ID .)
    DIVIDE          reduce using rule 55 (expression -> ID .)
    EXACTDIV        reduce using rule 55 (expression -> ID .)
    MOD             reduce using rule 55 (expression -> ID .)
    AS              reduce using rule 55 (expression -> ID .)
    EXP             reduce using rule 55 (expression -> ID .)
    COLON           reduce using rule 55 (expression -> ID .)
    $end            reduce using rule 55 (expression -> ID .)
    MINUS           shift and go to state 32
    ID              shift and go to state 62
    INTEGER         shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    LBRACE          shift and go to state 36

  ! MINUS           [ reduce using rule 55 (expression -> ID .) ]

    expression                     shift and go to state 67
    args_list                      shift and go to state 69

state 21

    (24) assignment -> LET . ID EQUALS expression

    ID              shift and go to state 70


state 22

    (49) expression -> LPAREN . expression RPAREN
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression EXACTDIV expression
    (44) expression -> . expression MOD expression
    (45) expression -> . expression AS expression
    (46) expression -> . expression EXP expression
    (47) expression -> . expression DOT ID
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . ID LPAREN RPAREN
    (51) expression -> . ID LPAREN args_list RPAREN
    (52) expression -> . INTEGER
    (53) expression -> . DECIMAL
    (54) expression -> . STRING
    (55) expression -> . ID
    (56) expression -> . LBRACE args_list RBRACE

    MINUS           shift and go to state 32
    LPAREN          shift and go to state 22
    ID              shift and go to state 62
    INTEGER         shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    LBRACE          shift and go to state 36

    expression                     shift and go to state 71

state 23

    (27) declaration -> declare_array .

    COLON           reduce using rule 27 (declaration -> declare_array .)
    $end            reduce using rule 27 (declaration -> declare_array .)


state 24

    (90) control -> EXIT . WHILE
    (91) control -> EXIT . DO
    (92) control -> EXIT . FOR

    WHILE           shift and go to state 72
    DO              shift and go to state 73
    FOR             shift and go to state 74


state 25

    (68) while_block_begin -> WHILE . rel_expression
    (29) rel_expression -> . expression GREATER_THAN expression
    (30) rel_expression -> . expression LESS_THAN expression
    (31) rel_expression -> . expression EQUAL_GREATER_THAN expression
    (32) rel_expression -> . expression EQUAL_LESS_THAN expression
    (33) rel_expression -> . expression EQUALS expression
    (34) rel_expression -> . expression NOT_EQUAL expression
    (35) rel_expression -> . rel_expression AND rel_expression
    (36) rel_expression -> . rel_expression OR rel_expression
    (37) rel_expression -> . LPAREN rel_expression RPAREN
    (38) rel_expression -> . NOT rel_expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression EXACTDIV expression
    (44) expression -> . expression MOD expression
    (45) expression -> . expression AS expression
    (46) expression -> . expression EXP expression
    (47) expression -> . expression DOT ID
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . ID LPAREN RPAREN
    (51) expression -> . ID LPAREN args_list RPAREN
    (52) expression -> . INTEGER
    (53) expression -> . DECIMAL
    (54) expression -> . STRING
    (55) expression -> . ID
    (56) expression -> . LBRACE args_list RBRACE

    LPAREN          shift and go to state 77
    NOT             shift and go to state 78
    MINUS           shift and go to state 32
    ID              shift and go to state 62
    INTEGER         shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    LBRACE          shift and go to state 36

    rel_expression                 shift and go to state 75
    expression                     shift and go to state 76

state 26

    (69) do_block_begin -> DO .

    COLON           reduce using rule 69 (do_block_begin -> DO .)
    $end            reduce using rule 69 (do_block_begin -> DO .)


state 27

    (70) for_block_begin -> FOR . ID EQUALS expression TO expression
    (71) for_block_begin -> FOR . ID EQUALS expression TO expression STEP expression

    ID              shift and go to state 79


state 28

    (93) control -> CONTINUE . WHILE
    (94) control -> CONTINUE . DO
    (95) control -> CONTINUE . FOR

    WHILE           shift and go to state 80
    DO              shift and go to state 81
    FOR             shift and go to state 82


state 29

    (87) return -> RETURN .
    (88) return -> RETURN . expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression EXACTDIV expression
    (44) expression -> . expression MOD expression
    (45) expression -> . expression AS expression
    (46) expression -> . expression EXP expression
    (47) expression -> . expression DOT ID
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . ID LPAREN RPAREN
    (51) expression -> . ID LPAREN args_list RPAREN
    (52) expression -> . INTEGER
    (53) expression -> . DECIMAL
    (54) expression -> . STRING
    (55) expression -> . ID
    (56) expression -> . LBRACE args_list RBRACE

    COLON           reduce using rule 87 (return -> RETURN .)
    $end            reduce using rule 87 (return -> RETURN .)
    MINUS           shift and go to state 32
    LPAREN          shift and go to state 22
    ID              shift and go to state 62
    INTEGER         shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    LBRACE          shift and go to state 36

    expression                     shift and go to state 83

state 30

    (89) prog_end -> END .
    (76) block_end -> END . IF
    (77) block_end -> END . SELECT
    (78) block_end -> END . WHILE
    (80) block_end -> END . FOR
    (85) block_end -> END . SUB
    (86) block_end -> END . FUNCTION

    COLON           reduce using rule 89 (prog_end -> END .)
    $end            reduce using rule 89 (prog_end -> END .)
    IF              shift and go to state 84
    SELECT          shift and go to state 85
    WHILE           shift and go to state 86
    FOR             shift and go to state 87
    SUB             shift and go to state 88
    FUNCTION        shift and go to state 89


state 31

    (21) defun_statement -> DEFUN . ID LPAREN params_list RPAREN EQUALS expression

    ID              shift and go to state 90


state 32

    (48) expression -> MINUS . expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression EXACTDIV expression
    (44) expression -> . expression MOD expression
    (45) expression -> . expression AS expression
    (46) expression -> . expression EXP expression
    (47) expression -> . expression DOT ID
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . ID LPAREN RPAREN
    (51) expression -> . ID LPAREN args_list RPAREN
    (52) expression -> . INTEGER
    (53) expression -> . DECIMAL
    (54) expression -> . STRING
    (55) expression -> . ID
    (56) expression -> . LBRACE args_list RBRACE

    MINUS           shift and go to state 32
    LPAREN          shift and go to state 22
    ID              shift and go to state 62
    INTEGER         shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    LBRACE          shift and go to state 36

    expression                     shift and go to state 91

state 33

    (52) expression -> INTEGER .

    DOT             reduce using rule 52 (expression -> INTEGER .)
    PLUS            reduce using rule 52 (expression -> INTEGER .)
    MINUS           reduce using rule 52 (expression -> INTEGER .)
    TIMES           reduce using rule 52 (expression -> INTEGER .)
    DIVIDE          reduce using rule 52 (expression -> INTEGER .)
    EXACTDIV        reduce using rule 52 (expression -> INTEGER .)
    MOD             reduce using rule 52 (expression -> INTEGER .)
    AS              reduce using rule 52 (expression -> INTEGER .)
    EXP             reduce using rule 52 (expression -> INTEGER .)
    COLON           reduce using rule 52 (expression -> INTEGER .)
    $end            reduce using rule 52 (expression -> INTEGER .)
    COMMA           reduce using rule 52 (expression -> INTEGER .)
    RPAREN          reduce using rule 52 (expression -> INTEGER .)
    GREATER_THAN    reduce using rule 52 (expression -> INTEGER .)
    LESS_THAN       reduce using rule 52 (expression -> INTEGER .)
    EQUAL_GREATER_THAN reduce using rule 52 (expression -> INTEGER .)
    EQUAL_LESS_THAN reduce using rule 52 (expression -> INTEGER .)
    EQUALS          reduce using rule 52 (expression -> INTEGER .)
    NOT_EQUAL       reduce using rule 52 (expression -> INTEGER .)
    RBRACE          reduce using rule 52 (expression -> INTEGER .)
    AND             reduce using rule 52 (expression -> INTEGER .)
    OR              reduce using rule 52 (expression -> INTEGER .)
    THEN            reduce using rule 52 (expression -> INTEGER .)
    TO              reduce using rule 52 (expression -> INTEGER .)
    STEP            reduce using rule 52 (expression -> INTEGER .)


state 34

    (53) expression -> DECIMAL .

    DOT             reduce using rule 53 (expression -> DECIMAL .)
    PLUS            reduce using rule 53 (expression -> DECIMAL .)
    MINUS           reduce using rule 53 (expression -> DECIMAL .)
    TIMES           reduce using rule 53 (expression -> DECIMAL .)
    DIVIDE          reduce using rule 53 (expression -> DECIMAL .)
    EXACTDIV        reduce using rule 53 (expression -> DECIMAL .)
    MOD             reduce using rule 53 (expression -> DECIMAL .)
    AS              reduce using rule 53 (expression -> DECIMAL .)
    EXP             reduce using rule 53 (expression -> DECIMAL .)
    COLON           reduce using rule 53 (expression -> DECIMAL .)
    $end            reduce using rule 53 (expression -> DECIMAL .)
    COMMA           reduce using rule 53 (expression -> DECIMAL .)
    RPAREN          reduce using rule 53 (expression -> DECIMAL .)
    GREATER_THAN    reduce using rule 53 (expression -> DECIMAL .)
    LESS_THAN       reduce using rule 53 (expression -> DECIMAL .)
    EQUAL_GREATER_THAN reduce using rule 53 (expression -> DECIMAL .)
    EQUAL_LESS_THAN reduce using rule 53 (expression -> DECIMAL .)
    EQUALS          reduce using rule 53 (expression -> DECIMAL .)
    NOT_EQUAL       reduce using rule 53 (expression -> DECIMAL .)
    RBRACE          reduce using rule 53 (expression -> DECIMAL .)
    AND             reduce using rule 53 (expression -> DECIMAL .)
    OR              reduce using rule 53 (expression -> DECIMAL .)
    THEN            reduce using rule 53 (expression -> DECIMAL .)
    TO              reduce using rule 53 (expression -> DECIMAL .)
    STEP            reduce using rule 53 (expression -> DECIMAL .)


state 35

    (54) expression -> STRING .

    DOT             reduce using rule 54 (expression -> STRING .)
    PLUS            reduce using rule 54 (expression -> STRING .)
    MINUS           reduce using rule 54 (expression -> STRING .)
    TIMES           reduce using rule 54 (expression -> STRING .)
    DIVIDE          reduce using rule 54 (expression -> STRING .)
    EXACTDIV        reduce using rule 54 (expression -> STRING .)
    MOD             reduce using rule 54 (expression -> STRING .)
    AS              reduce using rule 54 (expression -> STRING .)
    EXP             reduce using rule 54 (expression -> STRING .)
    COLON           reduce using rule 54 (expression -> STRING .)
    $end            reduce using rule 54 (expression -> STRING .)
    COMMA           reduce using rule 54 (expression -> STRING .)
    RPAREN          reduce using rule 54 (expression -> STRING .)
    GREATER_THAN    reduce using rule 54 (expression -> STRING .)
    LESS_THAN       reduce using rule 54 (expression -> STRING .)
    EQUAL_GREATER_THAN reduce using rule 54 (expression -> STRING .)
    EQUAL_LESS_THAN reduce using rule 54 (expression -> STRING .)
    EQUALS          reduce using rule 54 (expression -> STRING .)
    NOT_EQUAL       reduce using rule 54 (expression -> STRING .)
    RBRACE          reduce using rule 54 (expression -> STRING .)
    AND             reduce using rule 54 (expression -> STRING .)
    OR              reduce using rule 54 (expression -> STRING .)
    THEN            reduce using rule 54 (expression -> STRING .)
    TO              reduce using rule 54 (expression -> STRING .)
    STEP            reduce using rule 54 (expression -> STRING .)


state 36

    (56) expression -> LBRACE . args_list RBRACE
    (17) args_list -> . args_list COMMA expression
    (18) args_list -> . expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression EXACTDIV expression
    (44) expression -> . expression MOD expression
    (45) expression -> . expression AS expression
    (46) expression -> . expression EXP expression
    (47) expression -> . expression DOT ID
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . ID LPAREN RPAREN
    (51) expression -> . ID LPAREN args_list RPAREN
    (52) expression -> . INTEGER
    (53) expression -> . DECIMAL
    (54) expression -> . STRING
    (55) expression -> . ID
    (56) expression -> . LBRACE args_list RBRACE

    MINUS           shift and go to state 32
    LPAREN          shift and go to state 22
    ID              shift and go to state 62
    INTEGER         shift and go to state 33
    DECIMAL         shift and go to state 34
    STRING          shift and go to state 35
    LBRACE          shift and go to state 36

    args_list                      shift and go to state 92
    expression                     shift and go to state 67

state 37

    (57) block_begin -> while_block_begin .

    COLON           reduce using rule 57 (block_begin -> while_block_begin .)
    $end            reduce using rule 57 (block_begin -> while_block_begin .)


state 38

    (58) block_begin -> for_block_begin .

    COLON           reduce using rule 58 (block_begin -> for_block_begin .)
    $end            reduce using rule 58 (block_begin -> for_block_begin .)

